# GrossPitaevskiEQ

./: .gitignore  CMakeLists.txt  README.md  main.cpp
1Dproblem/: CMakeLists.txt  input.txt  input2D.txt  main.cpp  plot
1Dproblem/CrankNicolson/: CrankNicolson.cpp  CrankNicolson.hpp  DipoleInteraction.hpp
GPES/: CMakeLists.txt  CrankNicolson.cpp  CrankNicolson.hpp  CrankNicolson1D.inl  CrankNicolson2D.inl  definitions.hpp  dipoleinteraction.hpp  gpes.hpp  grid.hpp  main.cpp  visualitsation.hpp  wavefunciton.hpp
GPES/include/: CrankNicolson.hpp  CrankNicolson1D.inl  CrankNicolson2D.inl  ReadSimParams.hpp  SplitStep.hpp  definitions.hpp  dipoleinteraction.hpp  grid.hpp  traits.hpp  utility.hpp  visualitsation.hpp  wavefunction.hpp
GPES/src/: CrankNicolson.hpp  CrankNicolson1D.inl  CrankNicolson2D.inl  ReadSimParams.hpp  SaveSimResults.hpp  SplitStep.hpp  dipoleinteraction.hpp  grid.hpp  utility.hpp  visualitsation.hpp  wavefunciton.hpp
app/: CMakeLists.txt  main.cpp
app/cli/: cli.cpp  cli.hpp
include/gpes/: gpes.hpp
include/gpes/Core/: SaveSimResults.hpp  definitions.hpp  plot.hpp  traits.hpp  utility.hpp  visualitsation.hpp  wavefunction_io.hpp
include/gpes/Log/: Log.hpp
include/gpes/Solvers/: BogoliubovdeGennes.hpp  CrankNicolson.hpp  SplitStep.hpp  TDSESolver.hpp  experimental.hpp
include/gpes/dipoleinteraction/: dipoleinteraction.hpp
include/gpes/grid/: grid.hpp
include/gpes/source/plot/: plot.cpp
include/gpes/wavefunction/: wavefunction.hpp
inputs/: 1D_grid_test.txt  1D_search_solid.txt  2D_grid_test.txt  2D_test.txt  input.txt  input1D.txt  input2D.txt  t.txt
res/1D/Fin_states/: sim.csv
res/1D/test/: phi.csv  psi.csv
res/2D/Fin/: finstate_a_s0.001_e_dd0.5_2.csv   finstate_a_s0.1_e_dd0.5.csv   finstate_a_s0.1_e_dd1_3.csv 
res/2D/Fin/finstate_a_s0.001_e_dd0.01_test/: fin.csv
res/2D/Fin/finstate_a_s0.001_e_dd0.1_test/: fin.csv
res/2D/Fin/finstate_a_s0.001_e_dd0.2_test/: fin.csv
res/2D/Fin/finstate_a_s0.001_e_dd0.4_test/: fin.csv
res/2D/Fin/finstate_a_s0.001_e_dd0.6_test/: fin.csv
res/2D/Fin/finstate_a_s0.001_e_dd0.9_test/: fin.csv
res/2D/Fin/finstate_a_s0.01_e_dd0.01_test/: fin.csv
res/2D/Fin/finstate_a_s0.01_e_dd0.1_test/: fin.csv
res/2D/Fin/finstate_a_s0.01_e_dd0.2_test/: fin.csv
res/2D/Fin/finstate_a_s0.01_e_dd0.4_test/: fin.csv
res/2D/Fin/finstate_a_s0.01_e_dd0.6_test/: fin.csv
res/2D/Fin/finstate_a_s0.01_e_dd0.9_test/: fin.csv
res/2D/Fin/finstate_a_s0.1_e_dd0.01_test/: fin.csv
res/2D/Fin/finstate_a_s0.1_e_dd0.1_test/: fin.csv
res/2D/Fin/finstate_a_s0.1_e_dd0.2_test/: fin.csv
res/2D/Fin/finstate_a_s0.1_e_dd0.4_test/: fin.csv
res/2D/Fin/finstate_a_s0.1_e_dd0.6_test/: fin.csv
res/2D/Fin/finstate_a_s0.1_e_dd0.9_test/: fin.csv
res/2D/test/: phi.csv
scripts/: build.sh  builda.sh  run.sh  runsequence.sh  simulation1D.sh  simulation2D.sh  simulation2Dt.sh
source/Log/: Log.cpp
source/plot/: plot.cpp
